feat\!: added the HMS-Client structure, changed 'CMakeLists.txt', changed '.gitignore'

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,10 @@ compile_commands.json
 *creator.user*
 
 *_qmlcache.qrc
+
+# Hms
+.ssh/
+HotelManagementSystemClient/build/
+HotelManagementSystemClient/CMakeLists.txt.user
+HotelManagementSystemServer/build/
+HotelManagementSystemServer/CMakeLists.txt.user
