--- a/HotelManagementSystemServer/CMakeLists.txt
+++ b/HotelManagementSystemServer/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.20)
 
 project(HotelManagementSystemServer LANGUAGES CXX)
 
@@ -9,13 +9,24 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
+find_package(QT NAMES Qt6 Qt5)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Sql Network)
+
+file(GLOB HEADERS *.h)
+file(GLOB SOURCES *.cpp)
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/configuration.ini
+        ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
 
 add_executable(HotelManagementSystemServer
-  main.cpp
+    ${HEADERS}
+    ${SOURCES}
 )
-target_link_libraries(HotelManagementSystemServer Qt${QT_VERSION_MAJOR}::Core)
+target_link_libraries(HotelManagementSystemServer
+    Qt${QT_VERSION_MAJOR}::Core
+    Qt${QT_VERSION_MAJOR}::Sql
+    Qt${QT_VERSION_MAJOR}::Network
+)
 
 include(GNUInstallDirs)
 install(TARGETS HotelManagementSystemServer
